[gd_scene load_steps=13 format=2]

[ext_resource path="res://CheckConnection.gd" type="Script" id=1]
[ext_resource path="res://CheckPlace.gd" type="Script" id=2]
[ext_resource path="res://Puzzle.gd" type="Script" id=3]
[ext_resource path="res://Assets/Puzzle3of4.png" type="Texture2D" id=4]
[ext_resource path="res://Assets/Puzzle4of4.png" type="Texture2D" id=5]
[ext_resource path="res://Assets/Puzzle1of4.png" type="Texture2D" id=6]
[ext_resource path="res://Assets/Puzzle2of4.png" type="Texture2D" id=7]

[sub_resource type="RectangleShape2D" id=5]
size = Vector2( 128, 128 )

[sub_resource type="RectangleShape2D" id=1]
size = Vector2( 128, 128 )

[sub_resource type="RectangleShape2D" id=2]
size = Vector2( 128, 128 )

[sub_resource type="RectangleShape2D" id=3]
size = Vector2( 128, 128 )

[sub_resource type="RectangleShape2D" id=4]
size = Vector2( 127, 128 )

[node name="Puzzle" type="Node2D"]
position = Vector2( -50, 6 )
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 3 )
pieces = [ NodePath("Pieces/Puzzle0Of3"), NodePath("Pieces/Puzzle1Of3"), NodePath("Pieces/Puzzle2Of3"), NodePath("Pieces/Puzzle3Of3") ]

[node name="Solution" type="Node2D" parent="."]

[node name="Background" type="ColorRect" parent="Solution"]
offset_left = 396.0
offset_top = 236.0
offset_right = 908.0
offset_bottom = 748.0
mouse_filter = 2
color = Color( 0.40625, 0.155457, 0.155457, 1 )

[node name="Place0" type="Area2D" parent="Solution"]
position = Vector2( 524, 366 )
scale = Vector2( 0.9, 0.9 )
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Solution/Place0"]
shape = SubResource( 5 )

[node name="Place1" type="Area2D" parent="Solution"]
position = Vector2( 780, 366 )
scale = Vector2( 0.9, 0.9 )
script = ExtResource( 2 )
ConnectID = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Solution/Place1"]
shape = SubResource( 5 )

[node name="Place2" type="Area2D" parent="Solution"]
position = Vector2( 524, 622 )
scale = Vector2( 0.9, 0.9 )
script = ExtResource( 2 )
ConnectID = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Solution/Place2"]
shape = SubResource( 5 )

[node name="Place3" type="Area2D" parent="Solution"]
position = Vector2( 780, 622 )
scale = Vector2( 0.9, 0.9 )
script = ExtResource( 2 )
ConnectID = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Solution/Place3"]
shape = SubResource( 5 )

[node name="Pieces" type="Node2D" parent="."]

[node name="Puzzle0Of3" type="Sprite2D" parent="Pieces"]
position = Vector2( 1448, 340 )
texture = ExtResource( 6 )
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="Pieces/Puzzle0Of3"]
collision_layer = 255
collision_mask = 255

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pieces/Puzzle0Of3/Area2D"]
shape = SubResource( 1 )

[node name="Puzzle1Of3" type="Sprite2D" parent="Pieces"]
position = Vector2( 1750, 340 )
texture = ExtResource( 7 )
script = ExtResource( 1 )
ConnectID = 1

[node name="Area2D" type="Area2D" parent="Pieces/Puzzle1Of3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pieces/Puzzle1Of3/Area2D"]
shape = SubResource( 2 )

[node name="Puzzle2Of3" type="Sprite2D" parent="Pieces"]
position = Vector2( 1448, 696 )
texture = ExtResource( 4 )
script = ExtResource( 1 )
ConnectID = 2

[node name="Area2D" type="Area2D" parent="Pieces/Puzzle2Of3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pieces/Puzzle2Of3/Area2D"]
shape = SubResource( 3 )

[node name="Puzzle3Of3" type="Sprite2D" parent="Pieces"]
position = Vector2( 1768, 696 )
texture = ExtResource( 5 )
script = ExtResource( 1 )
ConnectID = 3

[node name="Area2D" type="Area2D" parent="Pieces/Puzzle3Of3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pieces/Puzzle3Of3/Area2D"]
shape = SubResource( 4 )

[connection signal="area_entered" from="Solution/Place0" to="Solution/Place0" method="_on_Place0_area_entered"]
[connection signal="area_exited" from="Solution/Place0" to="Solution/Place0" method="_on_Place_area_exited"]
[connection signal="area_entered" from="Solution/Place1" to="Solution/Place1" method="_on_Place0_area_entered"]
[connection signal="area_exited" from="Solution/Place1" to="Solution/Place1" method="_on_Place_area_exited"]
[connection signal="area_entered" from="Solution/Place2" to="Solution/Place2" method="_on_Place0_area_entered"]
[connection signal="area_exited" from="Solution/Place2" to="Solution/Place2" method="_on_Place_area_exited"]
[connection signal="area_entered" from="Solution/Place3" to="Solution/Place3" method="_on_Place0_area_entered"]
[connection signal="area_exited" from="Solution/Place3" to="Solution/Place3" method="_on_Place_area_exited"]
[connection signal="input_event" from="Pieces/Puzzle0Of3/Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Pieces/Puzzle0Of3/Area2D" to="." method="_on_Area2D_mouse_entered" binds= [ 0 ]]
[connection signal="mouse_exited" from="Pieces/Puzzle0Of3/Area2D" to="." method="_on_Area2D_mouse_exited"]
[connection signal="input_event" from="Pieces/Puzzle1Of3/Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Pieces/Puzzle1Of3/Area2D" to="." method="_on_Area2D_mouse_entered" binds= [ 1 ]]
[connection signal="mouse_exited" from="Pieces/Puzzle1Of3/Area2D" to="." method="_on_Area2D_mouse_exited"]
[connection signal="input_event" from="Pieces/Puzzle2Of3/Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Pieces/Puzzle2Of3/Area2D" to="." method="_on_Area2D_mouse_entered" binds= [ 2 ]]
[connection signal="mouse_exited" from="Pieces/Puzzle2Of3/Area2D" to="." method="_on_Area2D_mouse_exited"]
[connection signal="input_event" from="Pieces/Puzzle3Of3/Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Pieces/Puzzle3Of3/Area2D" to="." method="_on_Area2D_mouse_entered" binds= [ 3 ]]
[connection signal="mouse_exited" from="Pieces/Puzzle3Of3/Area2D" to="." method="_on_Area2D_mouse_exited"]
